--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev server.ts",
+    "start:development": "NODE_ENV=development nodemon --exec npx ts-node ./src/server.ts",
+    "start:production": "NODE_ENV=production node ./dist/server.js",
     "build": "tsc",
     "migrate:create": "cross-env NAME=$NAME node ./src/database/migrate create --name $NAME --folder src/database/migrations",
     "migrate:up": "node ./src/database/migrate up",
@@ -17,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "@types/config": "^3.3.4",
+    "@types/cors": "^2.8.17",
     "sequelize-cli": "^6.6.2",
     "typescript": "^5.5.4"
   },
@@ -25,8 +27,13 @@
     "@types/node": "^20.14.11",
     "bcrypt": "^5.1.1",
     "config": "^3.3.12",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "inversify": "^6.0.2",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
