--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "devDependencies": {
     "@types/config": "^3.3.4",
     "@types/cors": "^2.8.17",
+    "@types/lodash": "^4.17.7",
     "sequelize-cli": "^6.6.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.11",
     "bcrypt": "^5.1.1",
     "config": "^3.3.12",
@@ -34,6 +36,8 @@
     "inversify": "^6.0.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
